media/yubal/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yubal
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: yubal
