media/yubal/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yubal-route
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-gateway
    namespace: network
    sectionName: https
  hostnames:
  - "yubal.${INFRA_DOMAIN}"
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: yubal
      port: 8000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: Host
          value: localhost
